Added std::c++14 to makefile

--- a/codeCommun/tp/tp9/exec_dir/Makefile
+++ b/codeCommun/tp/tp9/exec_dir/Makefile
@@ -79,7 +79,7 @@ HEXFORMAT=ihex
 CFLAGS=-I. -I/usr/include/simavr  -MMD $(INC) -g -mmcu=$(MCU) -O$(OPTLEVEL) \
 	-fpack-struct -fshort-enums             \
 	-funsigned-bitfields -funsigned-char    \
-	-Wall                                        
+	-Wall -std=c++14                                     
 
 # Flags pour le compilateur en C++
 CXXFLAGS=-fno-exceptions     
